# EladSpectrum

./: .gitignore  CLAUDE.md  DEVELOPER.md  DEVELOPERS.md  README.md  USER.md  USER_GUIDE.md  meson.build
.github/workflows/: build-deb.yml  build.yml
debian/: changelog  control  copyright
examples/: Makefile.elad-gqrx  Makefile.elad-server  Makefile.main  README.txt  elad-gqrx.c  elad-server.c  main.c
src/: app_state.h  bandplan.c  bandplan.h  cat_control.c  cat_control.h  fft_processor.c  fft_processor.h  main.c  rotary_encoder.c  rotary_encoder.h  settings.c  settings.h  spectrum_widget.c  spectrum_widget.h  usb_device.c  usb_device.h  waterfall_widget.c  waterfall_widget.h
